Fix scrolling issues on mobile iOS

--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -3,8 +3,6 @@
 .site {
     @include flexCol;
     padding: 25px;
-    height: 100vh;
-    overflow: scroll;
 
     .main {
         flex: 1;
