--- a/src/components/default.scss
+++ b/src/components/default.scss
@@ -1,6 +1,19 @@
 html,
 body {
   margin: 0;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+#___gatsby,
+#gatsby-focus-wrapper {
+  height: 100%;
+}
+
+#gatsby-focus-wrapper {
+  overflow: scroll;
 }
 
 .scroll-lock {
