--- a/src/pages/styles/illustrations.module.scss
+++ b/src/pages/styles/illustrations.module.scss
@@ -5,6 +5,7 @@
     flex-wrap: wrap;
     button {
         padding: 10px;
+        margin: 0;
         border: none;
         overflow: hidden;
         background-color: transparent;
